--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@
  } */
 
  .wrapper{
-    display: flex; 
     width: 100vw;
     height: 80vh;
     align-items: center;
@@ -32,6 +31,11 @@
     font-family: League Spartan;
     /* text-align: center; */
  }
+
+ .flex{
+   display: flex;
+ }
+
  .left-text{
     width: 60%;
  }
@@ -67,8 +71,71 @@
    
 
  }
-.one{
+/* .one{
    background: purple;
    width: 50%;
    display: flex;
+} */
+
+
+
+.profile{
+   background-color:var(--very-dark-maginta);
+   color: white;
+   /* width: 22%; */
+   height: 20%;
+   margin-left: 20px;
+   /* height:25%; */
+    /* position:absolute; */
+    /* right: 13%; */
+    /* top: 66%; */
+    /* top: 100%; */
+     
+}
+
+.profile-info{
+    margin-left: 10px;
+}
+
+
+
+.profile-img img{
+    border-radius: 50%;
+    width: 70px;
+    height:70px;
+    margin-top: 10px;
+    /* position:absolute; */
+}
+
+
+.profile-text{
+    margin-left:10px ;
+    position: relative;
+    flex-basis: 30%;
+}
+
+.profile-text p{
+    width: 250px;
+      /* /* height: 67px; */
+      }
+
+.profile-text h6{
+  margin-top: 17px;
+    /* /* height: 67px; */
+    }
+    
+
+.profile h5{
+width: 200px;
+margin-left: 10px;
+/* /* height: 67px; */
+}
+
+
+.profile-flex{
+   width: 100%;
+   /* height: 80vh; */
+   align-items: center;
+   justify-content: center;
+   font-family: League Spartan;
 }
