--- a/style.css
+++ b/style.css
@@ -16,16 +16,18 @@
  }
 
  /* .container{
-    width: 80vw;
+    width: 100vw;
     height: 80vh;
     align-items: center;
     justify-content: center;
     
  } */
 
+ 
+
  .wrapper{
     width: 100vw;
-    height: 80vh;
+    height: 60vh;
     align-items: center;
     justify-content: center;
     font-family: League Spartan;
@@ -79,12 +81,14 @@
 
 
 
-.profile{
+.profile1,.profile2, .profile3{
    background-color:var(--very-dark-maginta);
    color: white;
-   /* width: 22%; */
-   height: 20%;
+   /* width: 22%;
+   height: 30%; */
    margin-left: 20px;
+   border-radius: 5px;
+   
    /* height:25%; */
     /* position:absolute; */
     /* right: 13%; */
@@ -93,16 +97,23 @@
      
 }
 
+.profile2{
+   margin-top: 30px;
+}
+
+.profile3{
+   margin-top: 60px;
+}
 .profile-info{
-    margin-left: 10px;
+    margin: 10px;
 }
 
 
 
 .profile-img img{
     border-radius: 50%;
-    width: 70px;
-    height:70px;
+    width: 40px;
+    height:40px;
     margin-top: 10px;
     /* position:absolute; */
 }
@@ -112,6 +123,7 @@
     margin-left:10px ;
     position: relative;
     flex-basis: 30%;
+    
 }
 
 .profile-text p{
@@ -119,8 +131,10 @@
       /* /* height: 67px; */
       }
 
-.profile-text h6{
+.profile-text h5{
   margin-top: 17px;
+  font-weight: 700px;
+  
     /* /* height: 67px; */
     }
     
@@ -137,5 +151,14 @@ margin-left: 10px;
    /* height: 80vh; */
    align-items: center;
    justify-content: center;
-   font-family: League Spartan;
+   font-family: League Spartan;  
+}
+
+
+.tag{
+    width: 280px;
+   text-align: center;
+   align-items: center;
+   justify-content: center;
+   margin: 15px;
 }
