--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@
  }
 
  .left-text{
-    width: 60%;
+    width: 40%;
  }
 
  .left-text .heading{
@@ -57,21 +57,38 @@
  }
  
  .right-text{
-    width:20%;
+    width:40%;
     /* margin-right: 50px; */
  }
   
  .rate1, .rate2,.rate3{
    background: var(--light-grayish-magenta);
    padding:7px ;
-   color: var(--very-dark-maginta) ;
-   /* font-weight: 700px; */
-   font-family: League Spartan;
-   text-align: center;
    margin-bottom: 12px;
    border-radius: 5px;
-   width: 400px;
+   width: 320px;
+   text-align: center;
    
+ }
+  .rate-p{
+   color: var(--very-dark-maginta) ;
+   font-family: League Spartan;
+   font-weight: 700;
+  
+  }
+ 
+ .rate2{
+   margin-left: 25px;
+ }
+
+ .rate3{
+   margin-left: 50px;
+ }
+
+ img{
+   margin-left: 3px;
+   margin-right: 4px;
+   width: 12px;
  }
 
 
@@ -168,3 +185,53 @@ color: var(--soft-pink);
    margin: 15px;
    font-weight: 400px;
 }
+
+/* Mobile View */
+@media (max-width: 426px) {
+   .flex-sm{
+       flex-direction:column;
+      }
+
+      
+
+      .left-text,.right-text{
+         width: 70%;
+      }
+
+      .left-text .para1{
+         width: 280px;   
+      }
+
+      .right-text{
+         margin: 20px;
+      }
+
+      .left-text .heading{
+        margin-top: 10px;
+        
+      }
+
+      .rate1, .rate2,.rate3{
+         padding: 15px;
+         margin-bottom: 8px;
+         border-radius: 3px;
+         width: 300px;
+         font-size: 14px; 
+       }
+        
+       .rate2{
+         margin-left: 0px;
+       }
+      
+       .rate3{
+         margin-left: 0px;
+       }
+       img{
+        /* width: 12px;
+        margin: 3px; */
+        flex-direction: column;
+       }
+
+
+
+   }
