--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@
    padding:7px ;
    margin-bottom: 12px;
    border-radius: 5px;
-   width: 320px;
+   width: 400px;
    text-align: center;
    
  }
@@ -92,28 +92,19 @@
  }
 
 
+ .profile-flex{
+   width: 90%;
+ }
 
-/* .one{
-   background: purple;
-   width: 50%;
-   display: flex;
-} */
+
 
 
 
 .profile1,.profile2, .profile3{
    background-color:var(--very-dark-maginta);
    color: white;
-   /* width: 22%;
-   height: 30%; */
    margin-left: 20px;
    border-radius: 5px;
-   
-   /* height:25%; */
-    /* position:absolute; */
-    /* right: 13%; */
-    /* top: 66%; */
-    /* top: 100%; */
      
 }
 
@@ -135,7 +126,6 @@
     width: 40px;
     height:40px;
     margin-top: 10px;
-    /* position:absolute; */
 }
 
 
@@ -148,7 +138,6 @@
 
 .profile-text p{
     width: 250px;
-      /* /* height: 67px; */
       }
 
 .profile-text h4{
@@ -156,8 +145,6 @@
   font-weight: 700px;
   width: 100px;
   margin-bottom: 5px;
-  
-    /* /* height: 67px; */
     }
     
 
@@ -169,8 +156,6 @@ color: var(--soft-pink);
 
 
 .profile-flex{
-   width: 100%;
-   /* height: 80vh; */
    align-items: center;
    justify-content: center;
    font-family: League Spartan;  
@@ -185,6 +170,17 @@ color: var(--soft-pink);
    margin: 15px;
    font-weight: 400px;
 }
+
+
+.attribution {
+   font-size: 12px;
+   text-align: center;
+   margin-top: 10px;
+ }
+ .attribution a {
+   color: hsl(228, 45%, 44%);
+ }
+
 
 /* Mobile View */
 @media (max-width: 426px) {
@@ -215,7 +211,7 @@ color: var(--soft-pink);
          padding: 15px;
          margin-bottom: 8px;
          border-radius: 3px;
-         width: 400px;
+         width: 300px;
          font-size: 14px; 
        }
         
@@ -239,4 +235,7 @@ color: var(--soft-pink);
        }
 
 
+       .profile1,.profile2, .profile3{
+        margin-top: 20px;
+       }
    }
