--- a/style.css
+++ b/style.css
@@ -54,14 +54,17 @@
    padding:7px ;
    margin-bottom: 12px;
    border-radius: 5px;
-   width: 400px;
+   width: 350px;
    text-align: center;
+   align-items: center;
+
    
  }
   .rate-p{
    color: var(--very-dark-maginta) ;
    font-family: League Spartan;
    font-weight: 700;
+   margin-left: 5px;
   
   }
  
@@ -74,14 +77,9 @@
  }
 
  img{
-   margin-left: 3px;
-   margin-right: 4px;
+   margin-left: 4px;
+   margin-right: 5px;
    width: 12px;
- }
-
-
- .profile-flex{
-   width: 50%;
  }
 
 
@@ -93,12 +91,13 @@
      
 }
 
-.profile2{
-   margin-top: 30px;
+
+.profile1{
+   margin-bottom: 30px;
 }
 
 .profile3{
-   margin-top: 60px;
+   margin-top: 30px;
 }
 .profile-info{
     margin: 10px;
@@ -143,7 +142,8 @@ color: var(--soft-pink);
 .profile-flex{
    align-items: center;
    justify-content: center;
-   font-family: League Spartan;  
+   font-family: League Spartan; 
+   width: 90%; 
 }
 
 
